--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			.box{
 				width: 240px;
 				/* height: 338px; */
-				background: url(img/bg.gif);
+				background: url(bg.gif);
 				margin: 50px auto 0;
 				/* overflow: hidden; */
 				padding: 10px;
@@ -40,7 +40,7 @@
 				height: 30px;
 				line-height: 30px;
 				margin: 0 10px;
-				background: url(img/tb.gif) no-repeat 6px center;
+				background: url(tb.gif) no-repeat 6px center;
 			}
 			.box .list li a{
 				text-decoration: none;
